--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
   "main": "index.js",
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "ansi-to-html": "^0.7.2",
     "core-js": "^3.6.5",
     "quasar": "^2.0.0",
     "vue": "^3.0.0",
