--- a/front/package.json
+++ b/front/package.json
@@ -14,8 +14,11 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "ansi-to-html": "^0.7.2",
+    "axios": "^0.24.0",
+    "axios-mock-adapter": "^1.20.0",
     "core-js": "^3.6.5",
     "quasar": "^2.0.0",
+    "query-string": "^7.0.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12"
   },
